--- a/style.css
+++ b/style.css
@@ -1,3 +1,28 @@
+body {
+    margin-top: 50px;
+    background-color: rgb(48, 172, 48);
+    text-align: center;
+    font-size: x-large
+}
+
+table {
+    margin-left: auto; 
+    margin-right: auto
+}
+
+caption {
+    font-family: sans-serif;
+    font-size: 15px
+}
+
+div, table, input {
+    margin-top: 1em
+}
+
+input, button {
+    border-radius: 0.8em
+}
+
 .bon {
     background-color: green
 }
